<resources>
    <!--Strings dos Nomes das telas -->
    <string name="app_name">Charme X</string>
    <string name="tela_cadastro">Crie sua conta :)</string>
    <string name="tela_esqueci_minha_senha">Esqueci minha senha</string>
    <string name="fragment_inicio">Inicio</string>
    <string name="fragment_meus_agendamentos">Meus Agendamentos</string>
    <string name="fragment_meu_perfil">Meu Perfil</string>

    <!--Strings dos Nomes das telas -->

    <!--Strings da Tela de Login -->
    <string name="nome_de_usu_rio_ou_e_mail">Nome de Usuário ou E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>

    <string name="esqueci_minha_senha">Esqueci Minha Senha</string>
    <string name="crie_sua_conta">Crie sua Conta :)</string>
    <string name="imgLogo">Imagem do Logo</string>
    <!--Strings da Tela de Login -->


    <!-- Strings da Tela Cadastro -->
    <string name="texto_crie_sua_conta">Crie sua conta para começar a desfrutar das promoções exclusivas do Charme X! É simples, rápido e prático :)</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="nomeUsuario">Nome de Usuário</string>
    <string name="email">E-mail</string>
    <string name="cpf">CPF</string>
    <string name="dataNascimento">Data de Nascimento</string>
    <string name="telefoneOuCelular">Telefone ou Celular</string>
    <string name="btnCrieSuaConta">Crie sua conta</string>

    <!-- Strings da Tela Cadastro -->

    <!-- Strings da Tela Esqueci Minha Senha -->
    <string name="texto_esqueci_minha_senha">Para recuperar seu login ou senha, preencha o campo abaixo com o e-mail vinculado a conta. Enviaremos um e-mail com as informações da conta (seu nome de usuário e senha).</string>
    <string name="btnRecuperarDados">Recuperar dados da conta</string>
    <!-- Strings da Tela Esqueci Minha Senha -->

    <!-- Strings da Tela Principal -->
    <string name="app_label">Pesquisa</string>
    <string name="search_hint">Buscar por segmento, serviço ou empresa</string>
    <!-- Strings da Tela Principal -->

    <string name="btnAgendamentos">Agendamentos</string>
    <string name="title_activity_sla">sla</string>

</resources>
