<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:nestedScrollingEnabled="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/container_info_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/corRoxoClaro"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="0dp">

            <ImageView
                android:id="@+id/imgPerfilEmpresa"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_usuarios" />

            <EditText
                android:id="@+id/txtNomeClienteEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/corBranco"
                android:ems="10"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/nomeCompleto"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/corBranco"
                android:textColorHint="@color/corBranco"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_info_cliente"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:background="@color/corRosa"
            android:fontFamily="@font/roboto_medium"
            android:padding="10dp"
            android:text="Suas Informações"
            android:textAlignment="center"
            android:textColor="@color/corBranco"
            android:textSize="18sp" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtInfo"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:id="@+id/container_editar_informacoes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/txtInfo"
                android:layout_alignParentStart="false"
                android:layout_alignParentBottom="true"
                android:background="@color/corBranco"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/lblInfo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tableInfoLogin"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/corRoxoClaro"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="10dp"
                    android:text="Informações Pessoais"
                    android:textAlignment="center"
                    android:textColor="@color/corBranco"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtCPFEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cpf"
                    android:inputType="number"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txtDataNascimentoEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dataNascimento"
                    android:inputType="date"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txtTelCelEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefoneOuCelular"
                    android:inputType="phone"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/lblInfo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tableInfoLogin"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/corRoxoClaro"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="10dp"
                    android:text="Informações de Login"
                    android:textAlignment="center"
                    android:textColor="@color/corBranco"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtUsuarioEditar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/nomeUsuario"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    />

                <EditText
                    android:id="@+id/txtSenhaEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    />

                <EditText
                    android:id="@+id/txtEmailEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                   />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>